New Dijkstra-algorithm

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,17 +1234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_graph(df, city):\n",
     "    G = nx.Graph()\n",
     "    \n",
-    "    for index, row in df[df['type'] == 'node'].iterrows():  \n",
+    "    for _, row in df[df['type'] == 'node'].iterrows():  \n",
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
-    "    for index, way in df[df['type'] == 'way'].iterrows():\n",
+    "    for _, way in df[df['type'] == 'way'].iterrows():\n",
     "        highway_type = way['tagvalue']\n",
     "        if highway_type == 'track':\n",
     "            continue\n",
@@ -1260,21 +1260,18 @@
     "\n",
     "def select_random_node_pairs(df_nodes, num_pairs=10, min_distance=1000):\n",
     "    random_pairs = []\n",
+    "    nodes = df_nodes['id'].values\n",
     "\n",
-    "    for _ in range(num_pairs):\n",
-    "        start_node = random.choice(df_nodes['id'].values)\n",
-    "        end_node = random.choice(df_nodes['id'].values)\n",
-    "\n",
-    "        while start_node == end_node or haversine(\n",
+    "    while len(random_pairs) < num_pairs:\n",
+    "        start_node, end_node = random.sample(list(nodes), 2)\n",
+    "        distance = haversine(\n",
     "            df_nodes[df_nodes['id'] == start_node]['longitude'].values[0], \n",
     "            df_nodes[df_nodes['id'] == start_node]['latitude'].values[0],\n",
     "            df_nodes[df_nodes['id'] == end_node]['longitude'].values[0],\n",
     "            df_nodes[df_nodes['id'] == end_node]['latitude'].values[0]\n",
-    "        ) < min_distance:\n",
-    "            start_node = random.choice(df_nodes['id'].values)\n",
-    "            end_node = random.choice(df_nodes['id'].values)\n",
-    "\n",
-    "        random_pairs.append((start_node, end_node))\n",
+    "        )\n",
+    "        if distance >= min_distance:\n",
+    "            random_pairs.append((start_node, end_node))\n",
     "\n",
     "    return random_pairs\n",
     "\n",
@@ -1282,68 +1279,90 @@
     "    try:\n",
     "        shortest_path = nx.dijkstra_path(G, source=start_node, target=end_node, weight='weight')\n",
     "    except nx.NetworkXNoPath:\n",
-    "        print(f\"No path found between {start_node} and {end_node}, selecting new nodes.\")\n",
-    "        return None\n",
+    "        return None, 0  \n",
     "    \n",
-    "    types_traversed = []\n",
+    "    total_length = 0  \n",
+    "    type_lengths = {}  \n",
+    "\n",
     "    for i in range(len(shortest_path) - 1):\n",
-    "        node1 = shortest_path[i]\n",
-    "        node2 = shortest_path[i + 1]\n",
+    "        node1, node2 = shortest_path[i], shortest_path[i + 1]\n",
     "        edge_data = G.get_edge_data(node1, node2)\n",
     "        highway_type = edge_data['highway_type']\n",
-    "        types_traversed.append(highway_type)\n",
+    "        \n",
+    "        lon1, lat1 = G.nodes[node1]['pos']\n",
+    "        lon2, lat2 = G.nodes[node2]['pos']\n",
+    "        length = haversine(lon1, lat1, lon2, lat2)\n",
+    "        total_length += length\n",
     "\n",
-    "    return types_traversed\n",
+    "        type_lengths[highway_type] = type_lengths.get(highway_type, 0) + length\n",
+    "    \n",
+    "    return type_lengths, total_length\n",
     "\n",
-    "def plot_traffic_efficiency(results_df, output_folder, analysis_number):\n",
+    "def plot_traffic_efficiency(results_df, output_folder):\n",
     "    dijkstra_folder = os.path.join(output_folder, 'Dijkstra')\n",
     "    os.makedirs(dijkstra_folder, exist_ok=True)\n",
     "\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    sns.barplot(x='highway_type', y='count', hue='city', data=results_df, palette='muted')\n",
-    "    plt.title(f'Verkehrseffizienz: Häufigkeit der durchfahrenen Straßentypen (Analyse {analysis_number})')\n",
+    "    sns.barplot(x='highway_type', y='percentage', hue='city', data=results_df, palette='muted', errorbar=None)\n",
+    "    plt.title('Verkehrseffizienz: Prozentualer Anteil der Straßentypen zur Gesamtlänge')\n",
     "    plt.xlabel('Straßentyp')\n",
-    "    plt.ylabel('Durchfahrten (Anzahl)')\n",
+    "    plt.ylabel('Prozentualer Anteil (%)')\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(dijkstra_folder, f\"Dijkstra_Analysis_{analysis_number}.png\"))\n",
+    "    plt.savefig(os.path.join(dijkstra_folder, 'Dijkstra_Analysis_All.png'))\n",
     "    plt.close()\n",
     "\n",
     "def perform_dijkstra_analysis():\n",
     "    city_folder = \"City_data\"\n",
-    "    files = []\n",
     "    output_folder = \"Street diversity\"\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
+    "    distance_mapping = {\n",
+    "        \"village\": 1000,\n",
+    "        \"town\": 2000,\n",
+    "        \"city\": 3000\n",
+    "    }\n",
+    "\n",
+    "    all_results = []  \n",
+    "\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
-    "        files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
+    "        subfolder_files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "\n",
-    "    for analysis_number in range(1, 11):\n",
-    "        results = []\n",
-    "        for file in files:\n",
+    "        for file in subfolder_files:\n",
     "            city_name = os.path.splitext(os.path.basename(file))[0]\n",
-    "            df = load_from_all_xml(file)  \n",
-    "            G = create_graph(df, city_name)  \n",
-    "\n",
+    "            df = load_from_all_xml(file)\n",
+    "            G = create_graph(df, city_name)\n",
     "            df_nodes = df[df['type'] == 'node']\n",
-    "            node_pairs = select_random_node_pairs(df_nodes)\n",
     "\n",
-    "            all_types = []\n",
-    "            for start_node, end_node in node_pairs:\n",
-    "                types_traversed = run_dijkstra_and_track_types(G, start_node, end_node)\n",
-    "                while types_traversed is None:\n",
-    "                    start_node, end_node = random.choice(node_pairs)\n",
-    "                    types_traversed = run_dijkstra_and_track_types(G, start_node, end_node)\n",
-    "                all_types.extend(types_traversed)\n",
+    "            min_distance = distance_mapping[subfolder]\n",
     "\n",
-    "            type_counts = pd.Series(all_types).value_counts()\n",
-    "            for highway_type, count in type_counts.items():\n",
-    "                results.append({'city': city_name, 'highway_type': highway_type, 'count': count})\n",
+    "            for _ in range(10): \n",
+    "                node_pairs = select_random_node_pairs(df_nodes, num_pairs=10, min_distance=min_distance)\n",
     "\n",
-    "        results_df = pd.DataFrame(results)\n",
+    "                total_types_length = {}\n",
+    "                total_length = 0\n",
     "\n",
-    "        plot_traffic_efficiency(results_df, output_folder, analysis_number)\n",
+    "                for start_node, end_node in node_pairs:\n",
+    "                    type_lengths, path_length = run_dijkstra_and_track_types(G, start_node, end_node)\n",
+    "\n",
+    "                    while type_lengths is None: \n",
+    "                        start_node, end_node = random.choice(node_pairs)\n",
+    "                        type_lengths, path_length = run_dijkstra_and_track_types(G, start_node, end_node)\n",
+    "\n",
+    "                    total_length += path_length\n",
+    "                    for highway_type, length in type_lengths.items():\n",
+    "                        total_types_length[highway_type] = total_types_length.get(highway_type, 0) + length\n",
+    "\n",
+    "                results = []\n",
+    "                for highway_type, length in total_types_length.items():\n",
+    "                    percentage = (length / total_length) * 100\n",
+    "                    results.append({'city': city_name, 'highway_type': highway_type, 'percentage': percentage})\n",
+    "\n",
+    "                all_results.extend(results)\n",
+    "\n",
+    "    results_df = pd.DataFrame(all_results)\n",
+    "    plot_traffic_efficiency(results_df, output_folder)\n",
     "\n",
     "perform_dijkstra_analysis()"
    ]
