emergency solution for dijkstra with 500 iterations

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "import xml.etree.ElementTree as ET\n",
     "from matplotlib.lines import Line2D\n",
     "import random\n",
+    "import time\n",
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,8 +1247,8 @@
     "\n",
     "    for _, way in df[df['type'] == 'way'].iterrows():\n",
     "        highway_type = way['tagvalue']\n",
-    "        if highway_type == 'track':\n",
-    "            continue\n",
+    "        #if highway_type == 'track':\n",
+    "        #    continue\n",
     "        \n",
     "        node_ids_list = way['node_ids']\n",
     "        if node_ids_list is not None:\n",
@@ -1258,7 +1259,7 @@
     "    \n",
     "    return G\n",
     "\n",
-    "def select_random_node_pairs(df_nodes, num_pairs=10, min_distance=1000):\n",
+    "def select_random_node_pairs(df_nodes, num_pairs=1, min_distance=1000):\n",
     "    random_pairs = []\n",
     "    nodes = df_nodes['id'].values\n",
     "\n",
@@ -1276,11 +1277,15 @@
     "    return random_pairs\n",
     "\n",
     "def run_dijkstra_and_track_types(G, start_node, end_node):\n",
+    "    if start_node not in G or end_node not in G:\n",
+    "        print(f\"Knoten {start_node} oder {end_node} nicht im Graphen vorhanden.\")\n",
+    "        return None, 0  \n",
+    "\n",
     "    try:\n",
     "        shortest_path = nx.dijkstra_path(G, source=start_node, target=end_node, weight='weight')\n",
     "    except nx.NetworkXNoPath:\n",
     "        return None, 0  \n",
-    "    \n",
+    "\n",
     "    total_length = 0  \n",
     "    type_lengths = {}  \n",
     "\n",
@@ -1312,15 +1317,27 @@
     "    plt.savefig(os.path.join(dijkstra_folder, 'Dijkstra_Analysis_All.png'))\n",
     "    plt.close()\n",
     "\n",
+    "    filtered_df = results_df[results_df['highway_type'] != 'track']\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.barplot(x='highway_type', y='percentage', hue='city', data=filtered_df, palette='muted', errorbar=None)\n",
+    "    plt.title('Verkehrseffizienz (ohne track): Prozentualer Anteil der Straßentypen zur Gesamtlänge')\n",
+    "    plt.xlabel('Straßentyp')\n",
+    "    plt.ylabel('Prozentualer Anteil (%)')\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(dijkstra_folder, 'Dijkstra_Analysis_Without_Track.png'))\n",
+    "    plt.close()\n",
+    "\n",
     "def perform_dijkstra_analysis():\n",
     "    city_folder = \"City_data\"\n",
     "    output_folder = \"Street diversity\"\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "    distance_mapping = {\n",
-    "        \"village\": 1000,\n",
-    "        \"town\": 2000,\n",
-    "        \"city\": 3000\n",
+    "        \"village\": 800,\n",
+    "        \"town\": 1000,\n",
+    "        \"city\": 2000\n",
     "    }\n",
     "\n",
     "    all_results = []  \n",
@@ -1337,7 +1354,8 @@
     "\n",
     "            min_distance = distance_mapping[subfolder]\n",
     "\n",
-    "            for _ in range(10): \n",
+    "            for iteration in range(500): \n",
+    "                print(f\"Iteration {iteration + 1}/500 für Stadt: {city_name}\")\n",
     "                node_pairs = select_random_node_pairs(df_nodes, num_pairs=10, min_distance=min_distance)\n",
     "\n",
     "                total_types_length = {}\n",
@@ -1360,6 +1378,9 @@
     "                    results.append({'city': city_name, 'highway_type': highway_type, 'percentage': percentage})\n",
     "\n",
     "                all_results.extend(results)\n",
+    "\n",
+    "            #print(f\"Alle Iterationen für {city_name} abgeschlossen. Warte 10 Sekunden...\")\n",
+    "            #time.sleep(10)\n",
     "\n",
     "    results_df = pd.DataFrame(all_results)\n",
     "    plot_traffic_efficiency(results_df, output_folder)\n",
