--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,11 +1864,61 @@
     "    edge_density = edges_df.groupby(['grid_x', 'grid_y']).size().reset_index(name='edge_count')\n",
     "    return edge_density\n",
     "\n",
+    "def plot_grid_density(grid_density, city_name, output_folder):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.scatterplot(\n",
+    "        data=grid_density,\n",
+    "        x='grid_x', y='grid_y',\n",
+    "        size='edge_count', sizes=(10, 200),\n",
+    "        hue='edge_count', palette='viridis',\n",
+    "        alpha=0.7\n",
+    "    )\n",
+    "    plt.title(f\"Netzwerkdichte im 200m-Gitternetz von {city_name}\")\n",
+    "    plt.xlabel(\"Gitter x-Koordinate\")\n",
+    "    plt.ylabel(\"Gitter y-Koordinate\")\n",
+    "    plt.legend(title='Anzahl Kanten')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_folder, f\"Network_density_scatter_200m_Grid_{city_name}.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "def plot_specific_grids(grid_density, city_name, output_folder):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "    sns.scatterplot(\n",
+    "        data=grid_density,\n",
+    "        x='grid_x', y='grid_y',\n",
+    "        size='edge_count', sizes=(10, 200),\n",
+    "        hue='edge_count', palette='viridis',\n",
+    "        alpha=0.7\n",
+    "    )\n",
+    "\n",
+    "    specific_grids = grid_density[grid_density['edge_count'].isin([5, 60])]\n",
+    "    \n",
+    "    if not specific_grids.empty:\n",
+    "        sns.scatterplot(\n",
+    "            data=specific_grids,\n",
+    "            x='grid_x', y='grid_y',\n",
+    "            hue='edge_count', palette={5: 'blue', 60: 'red'},\n",
+    "            size='edge_count', sizes=(100, 300),\n",
+    "            edgecolor='black',\n",
+    "            alpha=1,\n",
+    "            legend=False\n",
+    "        )\n",
+    "\n",
+    "    plt.title(f\"Netzwerkdichte mit markierten Grid-Zellen (5 & 60 Kanten) - {city_name}\")\n",
+    "    plt.xlabel(\"Gitter x-Koordinate\")\n",
+    "    plt.ylabel(\"Gitter y-Koordinate\")\n",
+    "    plt.legend(title='Anzahl Kanten')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_folder, f\"Network_density_marked_5_60_{city_name}.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
     "city_folder = \"City_data\"\n",
     "output_folder = \"Density of various places\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['city']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "\n",
@@ -1884,21 +1934,9 @@
     "        city_output_folder = os.path.join(output_folder, city_name)\n",
     "        os.makedirs(city_output_folder, exist_ok=True)\n",
     "\n",
-    "        plt.figure(figsize=(10, 6))\n",
-    "        sns.scatterplot(\n",
-    "            data=grid_density,\n",
-    "            x='grid_x', y='grid_y',\n",
-    "            size='edge_count', sizes=(10, 200),\n",
-    "            hue='edge_count', palette='viridis',\n",
-    "            alpha=0.7\n",
-    "        )\n",
-    "        plt.title(f\"Netzwerkdichte im 200m-Gitternetz von {city_name}\")\n",
-    "        plt.xlabel(\"Gitter x-Koordinate\")\n",
-    "        plt.ylabel(\"Gitter y-Koordinate\")\n",
-    "        plt.legend(title='Anzahl Kanten')\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(city_output_folder, f\"Network_density_scatter_200m_Grid_{city_name}.png\"))\n",
-    "        plt.close()"
+    "        plot_grid_density(grid_density, city_name, city_output_folder)\n",
+    "\n",
+    "        plot_specific_grids(grid_density, city_name, city_output_folder)\n"
    ]
   },
   {
@@ -1980,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
