Street length evaluation without track

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -4923,13 +4923,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_length_comparison():\n",
     "    city_folder = \"City_data\"\n",
     "    files = []\n",
+    "    \n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
     "        files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
@@ -4939,8 +4940,30 @@
     "    for file in files:\n",
     "        df = load_from_all_xml(file)\n",
     "\n",
+    "        # Filtere Wege, um 'track' auszuschließen\n",
+    "        df_ways = df[(df['type'] == 'way') & (df['tagvalue'] != 'track')]\n",
+    "\n",
+    "        # Finde alle Knoten, die nur mit 'track'-Wege verbunden sind\n",
+    "        track_nodes = set()\n",
+    "        for _, way in df[df['tagvalue'] == 'track'].iterrows():\n",
+    "            if way['node_ids'] is not None:\n",
+    "                track_nodes.update(way['node_ids'])\n",
+    "\n",
+    "        # Prüfe, ob diese Knoten auch in anderen Straßen vorkommen\n",
+    "        connected_nodes = set()\n",
+    "        for _, way in df_ways.iterrows():\n",
+    "            if way['node_ids'] is not None:\n",
+    "                connected_nodes.update(way['node_ids'])\n",
+    "\n",
+    "        # Behalte nur Knoten, die nicht ausschließlich in 'track' verwendet wurden\n",
+    "        valid_nodes = connected_nodes - track_nodes\n",
+    "\n",
+    "        # Filtere Wege weiter, um nur Straßen mit gültigen Knoten zu behalten\n",
+    "        df_filtered = df_ways[df_ways['node_ids'].apply(lambda nodes: any(node in valid_nodes for node in nodes))]\n",
+    "        \n",
     "        # Nur Straßen mit Längen auswählen\n",
-    "        df_filtered = df[(df['type'] == 'way') & df['length'].notna()]\n",
+    "        df_filtered = df_filtered[df_filtered['length'].notna()]\n",
+    "        \n",
     "        city_name = os.path.basename(file).replace(\".osm\", \"\")\n",
     "        df_filtered['city'] = city_name\n",
     "        all_lengths.append(df_filtered[['length', 'city']])\n",
@@ -4970,7 +4993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4985,14 +5008,25 @@
     "        city_name = os.path.splitext(os.path.basename(file))[0]\n",
     "        df = load_from_all_xml(file)\n",
     "\n",
-    "        df_filtered = df[(df['type'] == 'way') & df['length'].notna()]\n",
+    "        # Filtere alle \"track\"-Wege heraus\n",
+    "        df_filtered_ways = df[(df['type'] == 'way') & df['length'].notna() & (df['tagvalue'] != 'track')]\n",
     "\n",
+    "        # Finde alle Knoten, die in nicht-track-Wegen vorkommen\n",
+    "        valid_nodes = set()\n",
+    "        for node_list in df_filtered_ways['node_ids'].dropna():\n",
+    "            valid_nodes.update(node_list)\n",
+    "\n",
+    "        # Entferne Wege, die nur aus Knoten bestehen, die an \"track\"-Wege angeschlossen sind\n",
+    "        df_filtered = df_filtered_ways[df_filtered_ways['node_ids'].apply(lambda nodes: any(n in valid_nodes for n in nodes))]\n",
+    "\n",
+    "        # Erstelle das Ausgabe-Ordner\n",
     "        output_folder = \"Street length of various places\"\n",
     "        os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "        city_output_folder = os.path.join(output_folder, city_name)\n",
     "        os.makedirs(city_output_folder, exist_ok=True)\n",
     "\n",
+    "        # Erstelle Histogramm der Straßenlängen\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.histplot(df_filtered['length'], bins=30, kde=True)\n",
     "        plt.xscale(\"log\")\n",
@@ -5000,7 +5034,8 @@
     "        plt.xlabel(\"Straßenlänge (log)\")\n",
     "        plt.ylabel(\"Anzahl der Straßen\")\n",
     "        plt.savefig(os.path.join(city_output_folder, f\"Street_length_{city_name}.png\"))\n",
-    "        plt.close()"
+    "        plt.close()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -5181,10 +5216,7 @@
    "outputs": [],
    "source": [
     "street_length_comparison()\n",
-    "street_length_per_city()\n",
-    "federal_highways_per_city()\n",
-    "city_streets_per_city()\n",
-    "footpaths_per_city()"
+    "street_length_per_city()"
    ]
   },
   {
