axis for density ignored

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -824,7 +824,7 @@
     "            if result.get(\"osm_type\") in [\"node\", \"relation\"]:\n",
     "                if result.get(\"addresstype\") in [\"village\", \"town\", \"city\"] and 'boundingbox' in result:\n",
     "                    display_name = result.get(\"display_name\", \"\")\n",
-    "                    if 'Baden-Württemberg' in display_name:\n",
+    "                    if 'Bayern' in display_name:\n",
     "                        bbox = result['boundingbox']\n",
     "                        addresstype = result.get(\"addresstype\", \"\")\n",
     "                        return [float(coord) for coord in bbox], addresstype  \n",
@@ -924,7 +924,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1910,7 +1910,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_grid_density(df_nodes, df_ways, grid_size=200):\n",
+    "def calculate_grid_density(df_nodes, df_ways, grid_size=100):\n",
     "    earth_radius = 6371000\n",
     "\n",
     "    # Filtere alle track-Wege heraus\n",
@@ -1954,12 +1954,14 @@
     "        hue='edge_count', palette='viridis',\n",
     "        alpha=0.7\n",
     "    )\n",
-    "    plt.title(f\"Netzwerkdichte im 200m-Gitternetz von {city_name}\")\n",
-    "    plt.xlabel(\"Gitter x-Koordinate\")\n",
-    "    plt.ylabel(\"Gitter y-Koordinate\")\n",
+    "    plt.title(f\"Netzwerkdichte im 100m-Gitternetz von {city_name}\")\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.xlabel(\"\")\n",
+    "    plt.ylabel(\"\")\n",
     "    plt.legend(title='Anzahl Kanten')\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_folder, f\"Network_density_scatter_200m_Grid_{city_name}.png\"))\n",
+    "    plt.savefig(os.path.join(output_folder, f\"Network_density_scatter_100m_Grid_{city_name}.png\"))\n",
     "    plt.close()\n",
     "\n",
     "def plot_specific_grids(grid_density, city_name, output_folder):\n",
@@ -1987,8 +1989,10 @@
     "        )\n",
     "\n",
     "    plt.title(f\"Netzwerkdichte mit markierten Grid-Zellen (5 & 60 Kanten) - {city_name}\")\n",
-    "    plt.xlabel(\"Gitter x-Koordinate\")\n",
-    "    plt.ylabel(\"Gitter y-Koordinate\")\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.xlabel(\"\")\n",
+    "    plt.ylabel(\"\")\n",
     "    plt.legend(title='Anzahl Kanten')\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(output_folder, f\"Network_density_marked_5_60_{city_name}.png\"))\n",
@@ -1999,7 +2003,7 @@
     "output_folder = \"Density of various places\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "for subfolder in ['city']:\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "\n",
